--- a/pdb2ar/common/style.css
+++ b/pdb2ar/common/style.css
@@ -226,7 +226,7 @@ figure {
   }
   
   .zoom-container {
-    transform: translateY(-18%);
+    transform: translateY(-78%);
     padding: 0.5rem 0.5rem;
   }
   .camera-container {
